feat(report): add form chapter

--- a/report/1-week-1/index.tex
+++ b/report/1-week-1/index.tex
@@ -4,37 +4,44 @@
 
 \section{Exercise 1}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex1.php}
 \subfile{pyg/src/1-week-1/ex1}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex1.php}}
+\captionsetup{type=figure}\captionof{figure}{ex1.php}
 
 \section{Exercise 2}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex2.php}
 \subfile{pyg/src/1-week-1/ex2}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex2.php}}
+\captionsetup{type=figure}\captionof{figure}{ex2.php}
 
 \section{Exercise 3}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex3.php}
 \subfile{pyg/src/1-week-1/ex3}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex3.php}}
+\captionsetup{type=figure}\captionof{figure}{ex3.php}
 
 \section{Exercise 4}
 
-The last argument of \texttt{gmddate()\texttt} allows you to provide a specific date to format. This argument is optional and will use the current date and time if it is not provided.
+The last argument of \texttt{gmddate()\texttt} allows you to provide a specific date to format. This argument is optional and will use the current date and time if it is not provided.\\
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex4.php}
 \subfile{pyg/src/1-week-1/ex4}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex4.php}}
+\captionsetup{type=figure}\captionof{figure}{ex4.php}
 
 \section{Exercise 5}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex5.php}
 \subfile{pyg/src/1-week-1/ex5}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex5.php}}
+\captionsetup{type=figure}\captionof{figure}{ex5.php}
 
 \section{Exercise 6}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex6.php}
 \subfile{pyg/src/1-week-1/ex6}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex6.php}}
+\captionsetup{type=figure}\captionof{figure}{ex6.php}
 
 \section{Exercise 7}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex7.php}
 \subfile{pyg/src/1-week-1/ex7}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex7.php}}
+\captionsetup{type=figure}\captionof{figure}{ex7.php}
