--- a/report/2-syntax/index.tex
+++ b/report/2-syntax/index.tex
@@ -1,74 +1,87 @@
 % !TeX root = ../index.tex
 \chapter{Syntax}
+\fxnote{Add output images}
 
 \section{Exercise 1}
 
 Converted the shorthand PHP tags to \texttt{<?php} as IntWeb has disabled the language feature.
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex1.php}
 \subfile{pyg/src/2-syntax/ex1}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex1.php}}
+\captionsetup{type=figure}\captionof{figure}{ex1.php}
 
 \section{Exercise 2}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex2.php}
 \subfile{pyg/src/2-syntax/ex2}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex2.php}}
+\captionsetup{type=figure}\captionof{figure}{ex2.php}
 
 \section{Exercise 3}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex3.php}
 \subfile{pyg/src/2-syntax/ex3}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex3.php}}
+\captionsetup{type=figure}\captionof{figure}{ex3.php}
 
 \section{Exercise 4}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex4.php}
 \subfile{pyg/src/2-syntax/ex4}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex4.php}}
+\captionsetup{type=figure}\captionof{figure}{ex4.php}
 
 \section{Exercise 5}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex5.php}
 \subfile{pyg/src/2-syntax/ex5}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex5.php}}
+\captionsetup{type=figure}\captionof{figure}{ex5.php}
 
 \section{Exercise 6}
 
-If an index position isn't specified when assigning a value to an array then the value is inserted after the last index position in the array. In this case, $76$ is inserted into the 4th index.
+If an index position isn't specified when assigning a value to an array then the value is inserted after the last index position in the array. In this case, $76$ is inserted into the 4th index.\\
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex6.php}
 \subfile{pyg/src/2-syntax/ex6}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex6.php}}
+\captionsetup{type=figure}\captionof{figure}{ex6.php}
 
 \section{Exercise 7}
 
-11 lines will be displayed as it will loop from 0 until it reaches 10.
+11 lines will be displayed as it will loop from 0 until it reaches 10.\\
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex7.php}
 \subfile{pyg/src/2-syntax/ex7}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex7.php}}
+\captionsetup{type=figure}\captionof{figure}{ex7.php}
 
 \section{Exercise 8}
 
-Fixed the for loop syntax where a comma was used instead of a semi-colon.
+Fixed the for loop syntax where a comma was used instead of a semi-colon.\\
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex8.php}
 \subfile{pyg/src/2-syntax/ex8}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex8.php}}
+\captionsetup{type=figure}\captionof{figure}{ex8.php}
 
 \section{Exercise 9}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex9.php}
 \subfile{pyg/src/2-syntax/ex9}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex9.php}}
+\captionsetup{type=figure}\captionof{figure}{ex9.php}
 
 \section{Exercise 10}
 
-This has been revised to be displayed in a table from the exercise 12 task.
+This has been revised to be displayed in a table from the exercise 12 task.\\
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex10.php}
 \subfile{pyg/src/2-syntax/ex10}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex10.php}}
+\captionsetup{type=figure}\captionof{figure}{ex10.php}
 
 \section{Exercise 11}
 
-I opted to use the \texttt{sizeof} function to calculate the averages so that the average will always be correct if marks are removed or added to the array.
+I opted to use the \texttt{sizeof} function to calculate the averages so that the average will always be correct if marks are removed or added to the array.\\
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex11.php}
 \subfile{pyg/src/2-syntax/ex11}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex11.php}}
+\captionsetup{type=figure}\captionof{figure}{ex11.php}
 
 \section{Exercise 12}
 
+\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex12.php}
 \subfile{pyg/src/2-syntax/ex12}
-\captionsetup{type=figure}\captionof{figure}{\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex12.php}}
+\captionsetup{type=figure}\captionof{figure}{ex12.php}
