--- a/report/3-forms/index.tex
+++ b/report/3-forms/index.tex
@@ -1,7 +1,40 @@
 % !TeX root = ../index.tex
 \chapter{Forms}
+\fxnote{Add output images}
 
 \section{Exercise 1}
+
+\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex1.html}
+\subfile{pyg/src/3-forms/ex1}
+\captionsetup{type=figure}\captionof{figure}{ex1.html}
+
+\subfile{pyg/src/3-forms/ex1-action}
+\captionsetup{type=figure}\captionof{figure}{ex1-action.php}
+
 \section{Exercise 2}
+
+\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex2.html}
+\subfile{pyg/src/3-forms/ex2}
+\captionsetup{type=figure}\captionof{figure}{ex2.html}
+
+\subfile{pyg/src/3-forms/ex2-action}
+\captionsetup{type=figure}\captionof{figure}{ex2-action.php}
+
 \section{Exercise 3}
+
+If all the breaks are removed from the switch statement then the correct case is still accessed (selecting Part Time prints the part time course and not HNC, HND or BSC). However it will also print the default switch case (no course selected).\\
+
+This happens as the \texttt{break} keyword is used to exit the switch statement. If there is no break then it will keep going through the switch cases for anything else that matches - the default case matches anything.\\
+
+\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex3.html}
+\subfile{pyg/src/3-forms/ex3}
+\captionsetup{type=figure}\captionof{figure}{ex3.html}
+
+\subfile{pyg/src/3-forms/ex3-action}
+\captionsetup{type=figure}\captionof{figure}{ex3-action.php}
+
 \section{Exercise 4}
+
+\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex4.php}
+\subfile{pyg/src/3-forms/ex4}
+\captionsetup{type=figure}\captionof{figure}{ex4.php}
