feat: add images for sections 1 to 3

--- a/report/1-week-1/index.tex
+++ b/report/1-week-1/index.tex
@@ -1,47 +1,91 @@
 % !TeX root = ../index.tex
 \chapter{Week 1}
-\fxnote{Add output images}
+\graphicspath{{1-week-1/images/}}
 
 \section{Exercise 1}
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex1.php}
-\subfile{pyg/src/1-week-1/ex1}
 \captionsetup{type=figure}\captionof{figure}{ex1.php}
+\subfile{pyg/src/1-week-1/ex1}
 
+\begin{figure}[H]
+  \caption{Output of exercise 1}
+  \centering
+  \includegraphics[width=\textwidth]{ex1}
+\end{figure}
+
+\clearpage
 \section{Exercise 2}
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex2.php}
-\subfile{pyg/src/1-week-1/ex2}
 \captionsetup{type=figure}\captionof{figure}{ex2.php}
+\subfile{pyg/src/1-week-1/ex2}
+
+\begin{figure}[H]
+  \caption{Output of exercise 2}
+  \centering
+  \includegraphics[width=\textwidth]{ex2}
+\end{figure}
 
 \section{Exercise 3}
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex3.php}
-\subfile{pyg/src/1-week-1/ex3}
 \captionsetup{type=figure}\captionof{figure}{ex3.php}
+\subfile{pyg/src/1-week-1/ex3}
+
+\begin{figure}[H]
+  \caption{Output of exercise 3}
+  \centering
+  \includegraphics[width=\textwidth]{ex3}
+\end{figure}
 
 \section{Exercise 4}
 
 The last argument of \texttt{gmddate()\texttt} allows you to provide a specific date to format. This argument is optional and will use the current date and time if it is not provided.\\
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex4.php}
-\subfile{pyg/src/1-week-1/ex4}
 \captionsetup{type=figure}\captionof{figure}{ex4.php}
+\subfile{pyg/src/1-week-1/ex4}
 
+\begin{figure}[H]
+  \caption{Output of exercise 4}
+  \centering
+  \includegraphics[width=\textwidth]{ex4}
+\end{figure}
+
+\clearpage
 \section{Exercise 5}
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex5.php}
-\subfile{pyg/src/1-week-1/ex5}
 \captionsetup{type=figure}\captionof{figure}{ex5.php}
+\subfile{pyg/src/1-week-1/ex5}
+
+\begin{figure}[H]
+  \caption{Output of exercise 5}
+  \centering
+  \includegraphics[width=\textwidth]{ex5}
+\end{figure}
 
 \section{Exercise 6}
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex6.php}
-\subfile{pyg/src/1-week-1/ex6}
 \captionsetup{type=figure}\captionof{figure}{ex6.php}
+\subfile{pyg/src/1-week-1/ex6}
+
+\begin{figure}[H]
+  \caption{Output of exercise 6}
+  \centering
+  \includegraphics[width=\textwidth]{ex6}
+\end{figure}
 
 \section{Exercise 7}
 
 \url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex7.php}
-\subfile{pyg/src/1-week-1/ex7}
 \captionsetup{type=figure}\captionof{figure}{ex7.php}
+\subfile{pyg/src/1-week-1/ex7}
+
+\begin{figure}[H]
+  \caption{Output of exercise 7}
+  \centering
+  \includegraphics[width=\textwidth]{ex7}
+\end{figure}
