--- a/report/5-oophp-mysql/index.tex
+++ b/report/5-oophp-mysql/index.tex
@@ -1,5 +1,6 @@
 % !TeX root = ../index.tex
 \chapter{Object Oriented PHP \& MySQL}
+\graphicspath{{5-oophp-mysql/images/}}
 
 \section{Exercise 1}
 \section{Exercise 2}
