--- a/report/6-db-functions/index.tex
+++ b/report/6-db-functions/index.tex
@@ -1,5 +1,6 @@
 % !TeX root = ../index.tex
 \chapter{Database Connectivity \& Functions}
+\graphicspath{{6-db-functions/images/}}
 
 \section{Exercise 1}
 \section{Exercise 2}
