feat: add exercise 1-3 of section 4

--- a/report/bnu.cls
+++ b/report/bnu.cls
@@ -53,7 +53,7 @@
 \RequirePackage{textcomp}
 % TODO notes
 % \fxnote, \fxwarning, \fxerror, \fxfatal
-\RequirePackage[status=draft,noinline,index,author=]{fixme}
+\RequirePackage[status=draft,noinline,author=]{fixme}
 \fxusetheme{color}
 % Detect footnotes split into next page
 \RequirePackage{fnbreak}
