--- a/report/index.tex
+++ b/report/index.tex
@@ -4,5 +4,5 @@
   \include{frontmatter/cover}
   \include{frontmatter/toc}
   \include{frontmatter/content}
-  \listoffixmes
+  % \listoffixmes
 \end{document}
