feat: complete section 4 and 5

--- a/report/1-week-1/index.tex
+++ b/report/1-week-1/index.tex
@@ -4,7 +4,7 @@
 
 \section{Exercise 1}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex1.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex1.php}
 \captionsetup{type=figure}\captionof{figure}{ex1.php}
 \subfile{pyg/src/1-week-1/ex1}
 
@@ -17,7 +17,7 @@
 \clearpage
 \section{Exercise 2}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex2.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex2.php}
 \captionsetup{type=figure}\captionof{figure}{ex2.php}
 \subfile{pyg/src/1-week-1/ex2}
 
@@ -29,7 +29,7 @@
 
 \section{Exercise 3}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex3.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex3.php}
 \captionsetup{type=figure}\captionof{figure}{ex3.php}
 \subfile{pyg/src/1-week-1/ex3}
 
@@ -43,7 +43,7 @@
 
 The last argument of \texttt{gmddate()\texttt} allows you to provide a specific date to format. This argument is optional and will use the current date and time if it is not provided.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex4.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex4.php}
 \captionsetup{type=figure}\captionof{figure}{ex4.php}
 \subfile{pyg/src/1-week-1/ex4}
 
@@ -56,7 +56,7 @@ The last argument of \texttt{gmddate()\texttt} allows you to provide a specific 
 \clearpage
 \section{Exercise 5}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex5.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex5.php}
 \captionsetup{type=figure}\captionof{figure}{ex5.php}
 \subfile{pyg/src/1-week-1/ex5}
 
@@ -68,7 +68,7 @@ The last argument of \texttt{gmddate()\texttt} allows you to provide a specific 
 
 \section{Exercise 6}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex6.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex6.php}
 \captionsetup{type=figure}\captionof{figure}{ex6.php}
 \subfile{pyg/src/1-week-1/ex6}
 
@@ -80,7 +80,7 @@ The last argument of \texttt{gmddate()\texttt} allows you to provide a specific 
 
 \section{Exercise 7}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex7.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex7.php}
 \captionsetup{type=figure}\captionof{figure}{ex7.php}
 \subfile{pyg/src/1-week-1/ex7}
 
