--- a/report/2-syntax/index.tex
+++ b/report/2-syntax/index.tex
@@ -6,7 +6,7 @@
 
 Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as IntWeb has disabled the language feature.
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex1.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex1.php}
 \captionsetup{type=figure}\captionof{figure}{ex1.php}
 \subfile{pyg/src/2-syntax/ex1}
 
@@ -18,7 +18,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
 
 \section{Exercise 2}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex2.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex2.php}
 \captionsetup{type=figure}\captionof{figure}{ex2.php}
 \subfile{pyg/src/2-syntax/ex2}
 
@@ -30,7 +30,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
 
 \section{Exercise 3}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex3.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex3.php}
 \captionsetup{type=figure}\captionof{figure}{ex3.php}
 \subfile{pyg/src/2-syntax/ex3}
 
@@ -42,7 +42,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
 
 \section{Exercise 4}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex4.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex4.php}
 \captionsetup{type=figure}\captionof{figure}{ex4.php}
 \subfile{pyg/src/2-syntax/ex4}
 
@@ -55,7 +55,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
 \clearpage
 \section{Exercise 5}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex5.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex5.php}
 \captionsetup{type=figure}\captionof{figure}{ex5.php}
 \subfile{pyg/src/2-syntax/ex5}
 
@@ -69,7 +69,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
 
 If an index position isn't specified when assigning a value to an array then the value is inserted after the last index position in the array. In this case, $76$ is inserted into the 4th index.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex6.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex6.php}
 \captionsetup{type=figure}\captionof{figure}{ex6.php}
 \subfile{pyg/src/2-syntax/ex6}
 
@@ -83,7 +83,7 @@ If an index position isn't specified when assigning a value to an array then the
 
 11 lines will be displayed as it will loop from 0 until it reaches 10.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex7.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex7.php}
 \captionsetup{type=figure}\captionof{figure}{ex7.php}
 \subfile{pyg/src/2-syntax/ex7}
 
@@ -98,7 +98,7 @@ If an index position isn't specified when assigning a value to an array then the
 
 Fixed the for loop syntax where a comma was used instead of a semi-colon.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex8.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex8.php}
 \captionsetup{type=figure}\captionof{figure}{ex8.php}
 \subfile{pyg/src/2-syntax/ex8}
 
@@ -111,7 +111,7 @@ Fixed the for loop syntax where a comma was used instead of a semi-colon.\\
 \clearpage
 \section{Exercise 9}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex9.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex9.php}
 \captionsetup{type=figure}\captionof{figure}{ex9.php}
 \subfile{pyg/src/2-syntax/ex9}
 
@@ -126,7 +126,7 @@ Fixed the for loop syntax where a comma was used instead of a semi-colon.\\
 
 This has been revised to be displayed in a table from the exercise 12 task.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex10.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex10.php}
 \captionsetup{type=figure}\captionof{figure}{ex10.php}
 \subfile{pyg/src/2-syntax/ex10}
 
@@ -140,7 +140,7 @@ This has been revised to be displayed in a table from the exercise 12 task.\\
 
 I opted to use the \texttt{sizeof} function to calculate the averages so that the average will always be correct if marks are removed or added to the array.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex11.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex11.php}
 \captionsetup{type=figure}\captionof{figure}{ex11.php}
 \subfile{pyg/src/2-syntax/ex11}
 
@@ -153,7 +153,7 @@ I opted to use the \texttt{sizeof} function to calculate the averages so that th
 \clearpage
 \section{Exercise 12}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex12.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex12.php}
 \captionsetup{type=figure}\captionof{figure}{ex12.php}
 \subfile{pyg/src/2-syntax/ex12}
 
