--- a/report/3-forms/index.tex
+++ b/report/3-forms/index.tex
@@ -4,7 +4,7 @@
 
 \section{Exercise 1}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex1.html}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex1.html}
 \captionsetup{type=figure}\captionof{figure}{ex1.html}
 \subfile{pyg/src/3-forms/ex1}
 
@@ -27,7 +27,7 @@
 \clearpage
 \section{Exercise 2}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex2.html}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex2.html}
 \captionsetup{type=figure}\captionof{figure}{ex2.html}
 \subfile{pyg/src/3-forms/ex2}
 
@@ -64,7 +64,7 @@ If all the breaks are removed from the switch statement then the correct case is
 
 This happens as the \texttt{break} keyword is used to exit the switch statement. If there is no break then it will keep going through the switch cases for anything else that matches - the default case matches anything.\\
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex3.html}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex3.html}
 \clearpage
 \captionsetup{type=figure}\captionof{figure}{ex3.html}
 \subfile{pyg/src/3-forms/ex3}
@@ -87,7 +87,7 @@ This happens as the \texttt{break} keyword is used to exit the switch statement.
 \clearpage
 \section{Exercise 4}
 
-\url{http://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex4.php}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/3-forms/ex4.php}
 \captionsetup{type=figure}\captionof{figure}{ex4.php}
 \subfile{pyg/src/3-forms/ex4}
 
