feat: add exercise 1 from section 6

--- a/report/5-oophp-mysql/index.tex
+++ b/report/5-oophp-mysql/index.tex
@@ -4,7 +4,7 @@
 
 \section{Exercise 1}
 
-\url{https://intweb.bucks.ac.uk/~21606555/oos/5-oophp-mysql}
+\url{https://intweb.bucks.ac.uk/~21606555/oos/5-oophp-mysql/index.php}
 
 \captionsetup{type=figure}\captionof{figure}{class\_lib.php}
 \subfile{pyg/src/5-oophp-mysql/class_lib}
