--- a/report/6-db-functions/index.tex
+++ b/report/6-db-functions/index.tex
@@ -3,6 +3,22 @@
 \graphicspath{{6-db-functions/images/}}
 
 \section{Exercise 1}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/6-db-functions/ex1.html}
+
+\captionsetup{type=figure}\captionof{figure}{ex1.html}
+\subfile{pyg/src/6-db-functions/ex1}
+
+\clearpage
+\captionsetup{type=figure}\captionof{figure}{ex1-action.php}
+\subfile{pyg/src/6-db-functions/ex1-action}
+
+\begin{figure}[H]
+  \caption{Exercise 1 - Result}
+  \centering
+  \includegraphics[width=\textwidth]{ex1}
+\end{figure}
+
 \section{Exercise 2}
 \section{Exercise 3}
 \section{Exercise 4}
