chore: include sections 7-8 in report

--- a/report/frontmatter/content.tex
+++ b/report/frontmatter/content.tex
@@ -5,3 +5,5 @@
 \subfile{4-sessions/index}
 \subfile{5-oophp-mysql/index}
 \subfile{6-db-functions/index}
+\subfile{7-multimedia/index}
+\subfile{8-db-testing/index}
